# shorturl

./: Cargo.toml  README.md  rest.http
.github/workflows/: travis.yml
src/: config.rs  db.rs  error.rs  main.rs  route.rs
